Enabled compression/caching, html min, fixed background flicker

--- a/scss/components/_weather-forecast.scss
+++ b/scss/components/_weather-forecast.scss
@@ -10,12 +10,13 @@
         border-radius: 3px;
         margin: 50px 0 0;
 
-        opacity: 0;
+        min-height: 166px;
+        width: 100%;
 
         transition: $base-transition;
 
-        &.is-loaded {
-            opacity: 1;
+        &.is-loaded .Weather__forecast__item {
+          opacity: 1;
         }
 
         @include mobile {
@@ -34,6 +35,8 @@
 
             padding: 20px 35px;
             border-right: 1px solid $lightGrey;
+
+            opacity: 0;
 
             &:last-child {
                 border: none;
